--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,85 @@
 /* ini css */
-main{
+section{
     padding: 32px;
 }
 .logo-icon{
     height: 80px;
     width: 80px;
+    margin: 10px;
     background-image: url(https://png.pngtree.com/png-clipart/20200710/original/pngtree-kids-logo-png-image_4135839.jpg);
     background-size: cover;
     border-radius: 50%;
 }
 .nav-container{
+    background-color: #ffd700;
+    padding: 0 20px 0 20px;
+    margin: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+nav>a:hover{
+    background-color: #7664fd;
+    transition-duration: 0.5 s;
+    color:white;
+    cursor: pointer; 
+ }
+
 nav>a{
-    padding-left: 30px;
-    padding-right: 30px;
-    border: 1px solid;
+    background-color: #4731ef;
+    padding: 20px 20px 20px 20px;
+    color: rgb(255, 255, 255);
+    border: none;
     text-decoration: none;
 }
 .banner-container{
-    height: 350px;
+    max-height: 460px;
     width: 100%;
+    background-size:cover;
     border: 1px solid;
 }
+
+/* Slideshow container */
+.slideshow-container {
+    height: auto;
+    width:100%;
+    display: flexbox;
+    background-size:cover;
+
+}
+  
+  
+  /* The dots/bullets/indicators */
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display:inline-table;
+    transition: background-color 0.9s ease;
+}
+  
+.active {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name:fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 200px) {
+    .text {font-size: 11px}
+  }
+
 .profile-icon{
     height: 80px;
     width: 80px;
@@ -32,6 +87,7 @@ nav>a{
     background-size: cover;
     border-radius: 50%;
 }
+
 .profile1{
     background-image: url(../assets/1.png);
 }
@@ -52,6 +108,12 @@ nav>a{
     background-image: url(https://png.pngtree.com/png-vector/20191029/ourmid/pngtree-mosque-vector-icons-emblem-concept-design-creative-symbol-icon-png-image_1870201.jpg);
 }
 
+#my-profile{
+    background-color: #ffd700;
+}
+#message-me{
+    background-color: #ffd700;
+}
 .profile-content{
     display: flex;
     justify-content: space-evenly;
@@ -59,6 +121,19 @@ nav>a{
 .profile-item{
     text-align: center;
 }
-footer{
-    text-align: center;
+
+.profile-item:hover {
+    transform: scale(1.1);
+    transition-duration: 0.5s;
 }
+
+footer{
+    padding: 0 20px;
+    margin: 0px;
+    text-align: center;
+    color: white;
+    font-size: small;
+    background-color: #4731ef;
+    display:grid;
+}
+
